fix: pc version too narrow

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 :root {
-  --app-width: 600px;
+  --app-width: 800px;
 }
 
 #root {
